# hewllz

./: Cargo.toml
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day09.rs  day19.rs  day22.rs  main.rs
