[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bit-set = "0.5.3"
chumsky = "0.8.0"
clap = { version = "4.0.29", features = ["derive"] }
indoc = "1.0.7"
itertools = "0.10.5"
linq = "0.0.1-release"
num_enum = "0.5.7"
tap = "1.0.1"
